--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/AWhiteKnight/ioBroker.e3dc"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3"
+    "@iobroker/adapter-core": "^1.0.3",
+    "mcrypt": "^0.1.15"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
